# Retrieval-based-Voice-Conversion-WebUI

./: .gitignore  clone.py  generate_dataset.py  requirements.txt
infer/lib/: rtrvc.py
infer/lib/train/: utils.py
infer/modules/train/: extract_feature_print.py
rvc_training_data/: .env.example  README.md  pyproject.toml
rvc_training_data/colab/: train_rvc_colab.ipynb  train_rvc_colab.py
rvc_training_data/kaggle/: requirements-kaggle.txt  train_rvc_kaggle.ipynb  train_rvc_kaggle.py
rvc_training_data/sources/: catalog.json  zh_luxun_selected_simplified.txt
rvc_training_data/src/rvc_data_tools/: __init__.py  audio_utils.py  download_texts.py  generate_dataset.py  prepare_drive_zip.py  text_sources.py  tts_bridge.py  tts_client.py  validate_dataset.py
tools/: realtime_mic_vc.py
