[project]
name = "rvc-training-data"
version = "0.1.0"
description = "Tools for generating TTS datasets and launching RVC training."
requires-python = ">=3.10"
dependencies = [
    "mutagen>=1.47.0",
    "openai>=1.40.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
]

[project.scripts]
rvc-download-texts = "rvc_data_tools.download_texts:main"
rvc-generate-dataset = "rvc_data_tools.generate_dataset:main"
rvc-validate-dataset = "rvc_data_tools.validate_dataset:main"
rvc-zip-dataset = "rvc_data_tools.prepare_drive_zip:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rvc_data_tools"]
